--- a/lib/main.c.erb
+++ b/lib/main.c.erb
@@ -14,6 +14,9 @@ void Init_gems(void)
     ruby_init_ext("<%= so_path %>", <%= func %>);
   <% end %>
 }
+<% ignore_stdlib.each do |stdlib|%>
+void <%= "Init_#{stdlib.gsub('/', '_')}" %>(void){}
+<%end%>
 
 int main(int argc, char **argv)
 {
